# decoration-preview-service

./: .abacus.donotdelete  .dockerignore  .env.production.template  .gitignore  DEPLOYMENT.md  LICENSE  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.abacus/: context.md  latest_error.md  task.md
backend/: .dockerignore  Dockerfile  requirements.txt  run.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/models/: schemas.py
backend/app/services/: element_catalog.py  file_validator.py  job_store.py
backend/app/workers/: renderer.py
docs/: architecture.md  design-principles.md  scalability.md  security.md
docs/adr/: 001-python-fastapi.md  002-async-rendering.md  003-ecs-fargate.md  004-s3-kms-encryption.md
docs/diagrams/: c4-container-standalone.puml  c4-container.puml  c4-context-standalone.puml  c4-context.puml
docs/ops/: error_log.md
docs/presentation/: decoration-preview-service_4b541b44.key  decoration-preview-service_4b541b44.pptx
docs/project/: architecture.md  current_state.md  decisions.md  product_brief.md  session_handoff.md
examples/: README.md
infrastructure/: app.py  cdk.json
infrastructure/stacks/: api_stack.py  compute_stack.py  monitoring_stack.py  network_stack.py  storage_stack.py
scripts/: cleanup-aws-project.sh  cleanup-aws.sh
tests/: conftest.py
tests/unit/test_api/: test_elements.py  test_health.py  test_render.py  test_root.py
tests/unit/test_services/: test_element_catalog.py  test_file_validator.py  (+1 more)
